feat: home content | sidebar colors

--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -2,3 +2,9 @@
   border: 1px solid grey;
   padding: 1rem;
 }
+
+body {
+  max-height: 100dvh;
+  background-color: purple;
+  // font-family: sans-serif;
+}
