--- a/src/assets/scss/_normalize.scss
+++ b/src/assets/scss/_normalize.scss
@@ -105,7 +105,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace; /* 1 */
+  font-family: "Raleway", monospace, sans-serif; /* 1 */
   font-size: 1em; /* 2 */
 }
 
