--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -31,3 +31,8 @@
   border: 1px solid grey;
   padding: 1rem;
 }
+
+// active sidebar routes
+.sidebar-link:has(.active) {
+  background-color: hsl(var(--active-sidebar-link));
+}
