fix : fixed sidebar item not fully clickable

--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -33,6 +33,6 @@
 }
 
 // active sidebar routes
-.sidebar-link:has(.active) {
+.sidebar-link.active {
   background-color: hsl(var(--active-sidebar-link));
 }
