--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -34,5 +34,23 @@
 
 // active sidebar routes
 .sidebar-link.active {
-  background-color: hsl(var(--active-sidebar-link));
+  background-color: hsl(var(--scrollbar-track));
+}
+
+.scrollbar-style {
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: hsl(var(--scrollbar-track));
+
+    border-radius: 9999px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--primary));
+    border-radius: 9999px;
+    background-clip: padding-box;
+  }
 }
